Fix hero image overlay covering menu on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -90,23 +90,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
-
-#hero-container:before {
-  content: "";
-  position: absolute;
-  top: 76px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #212529;
-  opacity: 0.7;
-  height: 80vh;
-  width: 100vw;
-}
-
-#hero-text {
-  z-index: 1;
+  background-color: #333;
+  background-blend-mode: overlay;
 }
 
 /* Post Detail view styling */
